begin kuesioner elemen

--- a/Common/Common.tex
+++ b/Common/Common.tex
@@ -159,7 +159,7 @@ topsep=0pt, partopsep=0pt,
 \end{center}%
 }
 
-\NewDocumentCommand{\fourlikert}{ O{Strongly disagree} O{Strongly agree} O{5} m }{%
+\NewDocumentCommand{\fivelikert}{ O{Strongly disagree} O{Strongly agree} O{5} m }{%
 \setcounter{scaleCounter}{0}
 \def\ltablecfg{}
 \loop\ifnum\thescaleCounter<#3
