--- a/kuesioner.tex
+++ b/kuesioner.tex
@@ -56,7 +56,20 @@ Jika uang, waktu, dan halangan lainnya bukan pertimbangan, ruang mana yang sauda
 \score{Ruang A}
 \score{Ruang B}
 
+
 \subsection*{Pertanyaan 2}
+Silahkan indikasikan seberapa penting setiap atribut ruang pada ruang publik.
+
+\begin{enumerate}[leftmargin=1em]
+    \item \likertquestion[Sangat tidak penting][Sangat penting]{Jarak, kemudahan mengakses jalan dan parkir}
+\item \likertquestion[Sangat tidak penting][Sangat penting]{Pencahayaan, keramaian yang terkendali, dan kurangnya gangguan fisik dan sosial}
+
+\item \likertquestion[Sangat tidak penting][Sangat penting]{Keindahan pemandangan}
+
+\item \likertquestion[Sangat tidak penting][Sangat penting]{Keragaman atau ketersediaan penggunaan }
+\end{enumerate}
+
+\subsection*{Pertanyaan 3}
 \begin{itemize}
     \item Mengapa saudara menyukai ruang tersebut? Deskripsikan dengan detail apa yang menarik menurut saudara tentang atribut ruang itu?
 
@@ -78,64 +91,64 @@ Jika uang, waktu, dan halangan lainnya bukan pertimbangan, ruang mana yang sauda
   {\raggedleft \csvcoli & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$}%
 \end{center}
 
-\subsection*{Pertanyaan 3}
+\subsection*{Pertanyaan 4}
 Silakan nilai (centang) pendapat yang paling mewakili pendapat saudara dengan skala poin untuk setiap pernyataan. Dimana ``1" artinya tidak setuju ``5" artinya setuju. \\
 
 
 Gunakan baris tambahan untuk komentar-komentar.
 
 \begin{enumerate}[leftmargin=1em]
-    \item \fourlikert[][]{Jalan setapak membantu menuntun pengunjung ke ruang publik.}
+    \item \fivelikert[][]{Jalan setapak membantu menuntun pengunjung ke ruang publik.}
     \openquestion{\,}
 
-    \item \fourlikert[][]{Lahan parkir yang banyak adalah sangat baik untuk setiap orang.}
+    \item \fivelikert[][]{Lahan parkir yang banyak adalah sangat baik untuk setiap orang.}
     \openquestion{\,}
 
-    \item \fourlikert[][]{Tempat yang terbuka memudahkan ruang publik untuk dikenali.}
+    \item \fivelikert[][]{Tempat yang terbuka memudahkan ruang publik untuk dikenali.}
     \openquestion{\,}
 
-    \item \fourlikert[][]{Ruang publik adalah tempat yang terakses dan inklusif secara sosial dan harus digunakan oleh setiap orang tanpa harus bayar.}
-    \openquestion{\,}
-
-%----------------------------------------------------------------------------------------
-
-    \item \fourlikert[][]{Saya kurang enak saat orang lain melihat apa yang saya lakukan.}
-    \openquestion{\,}
-
-    \item \fourlikert[][]{Pembatas atau jarak tempat duduk berkontribusi terhadap ruang pribadi (\textit{personal space}) setiap orang}
-    \openquestion{\,}
-
-    \item \fourlikert[][]{Vandalisme, sampah, grafiti memberikan kesan negatif ruang publik}
-    \openquestion{\,}
-
-    \item \fourlikert[][]{Lampu jalan atau taman dapat memberikan kesempatan untuk berwisata malam}
+    \item \fivelikert[][]{Ruang publik adalah tempat yang terakses dan inklusif secara sosial dan harus digunakan oleh setiap orang tanpa harus bayar.}
     \openquestion{\,}
 
 %----------------------------------------------------------------------------------------
 
-    \item \fourlikert[][]{Dapat diterima untuk melepas vegetasi yang ada demi menambahkan pemandangan yang menyorot keindahan alam.}
+    \item \fivelikert[][]{Saya kurang enak saat orang lain melihat apa yang saya lakukan.}
+    \openquestion{\,}
+
+    \item \fivelikert[][]{Pembatas atau jarak tempat duduk berkontribusi terhadap ruang pribadi (\textit{personal space}) setiap orang}
+    \openquestion{\,}
+
+    \item \fivelikert[][]{Vandalisme, sampah, grafiti memberikan kesan negatif ruang publik}
+    \openquestion{\,}
+
+    \item \fivelikert[][]{Lampu jalan atau taman dapat memberikan kesempatan untuk berwisata malam}
+    \openquestion{\,}
+
+%----------------------------------------------------------------------------------------
+
+    \item \fivelikert[][]{Dapat diterima untuk melepas vegetasi yang ada demi menambahkan pemandangan yang menyorot keindahan alam.}
     \openquestion{\,}
 
 
-    \item \fourlikert[][]{Warna dan material lantai memberikan gaya pada ruang publik.}
+    \item \fivelikert[][]{Warna dan material lantai memberikan gaya pada ruang publik.}
     \openquestion{\,}
 
-    \item \fourlikert[][]{Saya lebih mungkin mengunjungi ruang publik yang bersih dan terpelihara.}
+    \item \fivelikert[][]{Saya lebih mungkin mengunjungi ruang publik yang bersih dan terpelihara.}
     \openquestion{\,}
 
 
 %----------------------------------------------------------------------------------------
 
-    \item \fourlikert[][]{Ruang komunal pada ruang publik diinginkan dan membantu interaksi sosial.}
+    \item \fivelikert[][]{Ruang komunal pada ruang publik diinginkan dan membantu interaksi sosial.}
     \openquestion{\,}
 
-    \item \fourlikert[][]{Beberapa aktifitas seperti olahraga, diizinkan di ruang publik (seperti berenang, skateboard \& sepeda).}
+    \item \fivelikert[][]{Beberapa aktifitas seperti olahraga, diizinkan di ruang publik (seperti berenang, skateboard \& sepeda).}
     \openquestion{\,}
 
-    \item \fourlikert[][]{Area alami di ruang publik memberikan jalan keluar dari tekanan hidup.}
+    \item \fivelikert[][]{Area alami di ruang publik memberikan jalan keluar dari tekanan hidup.}
     \openquestion{\,}
 
-    \item \fourlikert[][]{Ruang gerak yang lebih banyak sangat baik untuk setiap orang.}
+    \item \fivelikert[][]{Ruang gerak yang lebih banyak sangat baik untuk setiap orang.}
     \openquestion{\,}
 \end{enumerate}
 
