--- a/kuesioner.tex
+++ b/kuesioner.tex
@@ -45,6 +45,156 @@ Pekerjaan:
 \end{multicols}
 
 
+
+\subsection*{Frekuensi akses dan kunjungan tepi laut}
+
+
+Seberapa sering anda mengunjungi tepi laut?
+\begin{multicols}{3}
+\begin{itemize}
+\item[$\ocircle$] Tiap hari
+\item[$\ocircle$] banyak/minggu
+\item[$\ocircle$] sekali/minggu
+\item[$\ocircle$] sekali/bulan
+\item[$\ocircle$] jarang
+\end{itemize}
+\end{multicols}
+
+Apa kendaraan anda menuju tepi laut?
+\begin{multicols}{3}
+\begin{itemize}
+\item[$\ocircle$] Jalan kaki
+\item[$\ocircle$] Sepeda motor
+\item[$\ocircle$] Mobil
+\item[$\ocircle$] Sepeda
+\end{itemize}
+\end{multicols}
+
+Berapa lama perjalanan yang anda tempuh untuk ke tepi laut?
+\begin{multicols}{3}
+\begin{itemize}
+\item[$\ocircle$] kurang 5mnt
+\item[$\ocircle$] 5mnt-15mnt
+\item[$\ocircle$] 15mnt-30mnt
+\item[$\ocircle$] 30-60mnt
+\end{itemize}
+\end{multicols}
+
+
+Kapan anda mengunjungi tepi laut?
+\begin{multicols}{3}
+\begin{itemize}
+\item[$\ocircle$] Hari apa saja
+\item[$\ocircle$] Akhir pekan
+\item[$\ocircle$] Hari libur
+\end{itemize}
+\end{multicols}
+
+
+Waktu apa anda sering mengunjungi tepi laut?
+\begin{multicols}{3}
+\begin{itemize}
+\item[$\ocircle$] Pagi
+\item[$\ocircle$] Siang
+\item[$\ocircle$] Sore
+\item[$\ocircle$] Kapan saja
+\end{itemize}
+\end{multicols}
+
+Ruang mana yang anda paling sering kunjungi?
+\begin{multicols}{2}
+\begin{itemize}
+\item[$\ocircle$] A
+\item[$\ocircle$] B
+\end{itemize}
+\end{multicols}
+
+
+\subsection*{Elemen dan tingkatannya}
+
+\begin{multicols}{2}
+Kehadiran jalan paving
+\begin{itemize}
+\item[$\ocircle$] Semua dipaving
+\item[$\ocircle$] Sebagian dipaving
+\item[$\ocircle$] Tidak dipaving
+\end{itemize}
+
+Pohon dan tanaman
+\begin{itemize}
+\item[$\ocircle$] Banyak pohon
+\item[$\ocircle$] Beberapa pohon
+\item[$\ocircle$] Sedikit pohon
+\end{itemize}
+
+Fitur air
+\begin{itemize}
+\item[$\ocircle$] Beberapa fitur air
+\item[$\ocircle$] Tidak ada fitur air
+\end{itemize}
+
+Fasilitas
+\begin{itemize}
+\item[$\ocircle$] Toilet
+\item[$\ocircle$] Kedai makanan
+\item[$\ocircle$] Alat kebugaran
+\end{itemize}
+
+Ukuran
+\begin{itemize}
+\item[$\ocircle$] Luas
+\item[$\ocircle$] Sempit
+\end{itemize}
+
+
+Lalu lintas \textit{(Traffic)}
+\begin{itemize}
+\item[$\ocircle$] Padat
+\item[$\ocircle$] Ringan
+\end{itemize}
+
+\end{multicols}
+
+
+Silahkan pilih diantara dua ruang tepi laut dibawah ini yang anda cenderungi?
+
+\begin{itemize}
+\begin{figure}[htpb]
+    \centering
+    \includegraphics[width=0.65\textwidth]{./figures/ra}
+\end{figure}
+
+    \item [$\ocircle$] \qquad Ruang A
+\begin{figure}[htpb]
+    \centering
+    \includegraphics[width=0.65\textwidth]{./figures/rb}
+\end{figure}
+    \item  [$\ocircle$] \qquad Ruang B
+\end{itemize}
+
+Mengapa anda memilih ruang tersebut?
+
+
+\begin{table}[htpb]
+    \centering
+    \caption{Set pilihan}
+    \label{tab:set}
+    \begin{tabular}{p{.23\textwidth} c c p{.23\textwidth}}
+    & Ruang A & Ruang B & \centering\arraybackslash Saat ini \\
+    Keberadaan paving & Semua dipaving & Sebagian dipaving & \centering\arraybackslash\multirow{6}{*}{\parbox{2cm}{Saya tidak memilih satu pun ruang tersebut}}\\
+    Pohon dan tanaman & Banyak pohon & Beberapa pohon & \\
+    Fitur air & Beberapa fitur air & Tidak ada fitur air & \\
+    Fasilitas & toilet & kedai makanan & \\
+    Ukuran & Luas & Sempit & \\
+    Lalu lintas & Ringan & Padat & \\
+
+    Saya pilih & $\ocircle$ & $\ocircle$ & \centering{$\ocircle$} \\
+    \end{tabular}
+\end{table}
+
+
+\begin{comment}
+
 \subsection*{Pertanyaan 1}
 Jika uang, waktu, dan halangan lainnya bukan pertimbangan, ruang mana yang saudara lebih cenderungi untuk dikunjungi? Silakan nilai dengan skala poin 100  dimana ``1" artinya ``kurang dicenderungi" dan ``100" artinya "sangat dicenderungi".
 
@@ -55,7 +205,6 @@ Jika uang, waktu, dan halangan lainnya bukan pertimbangan, ruang mana yang sauda
 
 \score{Ruang A}
 \score{Ruang B}
-
 
 \subsection*{Pertanyaan 2}
 Silahkan indikasikan seberapa penting setiap atribut ruang pada ruang publik.
@@ -151,58 +300,6 @@ Gunakan baris tambahan untuk komentar-komentar.
     \item \fivelikert[][]{Ruang gerak yang lebih banyak sangat baik untuk setiap orang.}
     \openquestion{\,}
 \end{enumerate}
-
-
-\begin{comment}
-\newpage
-\textbf{Kognitif}
-\begin{enumerate}
-    \item Area alami di kota memberikan jalan keluar dari tekanan kehidupan kota.
-    \item Taman kota dan jalan setapak dapat memberikan kesempatan untuk belajar tentang alam.
-    \item Bangunan atau struktur bersejarah yang dijaga di taman berkontribusi kepada pemahaman komunitas sejarawan.
-\end{enumerate}
-
-\textbf{Ekologi}
-\begin{enumerate}
-    \item Dapat diterima untuk membatasi akses ke semua tempat di taman untuk melindungi spesies atau proses alami yang penting.
-    \item Taman perkotaan dan jalan setapak seharusnya menyorot keindahan penanaman naturalisasi, diadopsi ke kondisi lokal untuk menambah habitat spesies.
-    \item Taman perkotaan dan ruang hijau adalah rumah untuk beragam tanaman dan hewan yang harus dilindungi.
-    \item
-\end{enumerate}
-
-\textbf{Partisipatif}
-\begin{enumerate}
-    \item Jaringan tanaman dan jalan setapak yang terhubung dapat berfungsi sebagai rute transit alternatif ke jalan untuk bukan pengguna motor.
-    \item Jalan setapak taman dan kota seringkali merupakan jalan pintas dan alternatif aman untuk jalan yang banyak diperdagangkan.
-    \item Dalam sebuah taman, saya seringkali tertanggu oleh permainan riuh orang lain.
-\end{enumerate}
-
-\textbf{Adil}
-
-\begin{enumerate}
-    \item Taman dimaksudkan sebagai ruang "hanya anak"
-    \item Taman inklusif secara sosial dan tempat aksessibel dan harus digunakan oleh siapa saja tanpa pengecualian atau biaya masuk
-    \item Beberapa aktivitas seperti olahraga ekstrim dan alternatif, tidak diizinkan dilingkungan perkotaan lainnya, diizinkan di taman atau sepanjang setapak kota(seperti skateboard, sepeda bmx, skating)
-\end{enumerate}
-
-\textbf{Ekonomi}
-\begin{enumerate}
-    \item penggunaan komersial yang lebih banyak adalah sangat bagus untuk setiap orang
-    \item festival dan produksi pada taman diinginkan dan membawa pendapatan tambahan kepada komunitas
-    \item bisnis kecil, terletak di taman dapat memberikan pelayanan dan barang-barang kepada pengunjung taman.
-\end{enumerate}
-
-\textbf{Sensorik}
-\begin{enumerate}
-    \item seni publik, terletak di taman perkotaan dapat berkontribusi kepada identitas komunitas sekitar
-    \item Dapat diterima melepas vegetasi yang ada untuk meningkatkan pemandangan yang signifikan, yang menonjolkan keindahan alam
-    \item Saya lebih mungkin mengunjungi taman dan setapak perkotaaan di musim panas
-\end{enumerate}
-
-
-
-
-
 
 
 \section*{Others}
